--- a/Css/style.css
+++ b/Css/style.css
@@ -1,10 +1,24 @@
-body{
- 
-background-image: url("../Assests/back1.jpg");
-background-repeat: no-repeat;
-background-size: cover;
+html, body {
+  width: 100%;
+  height: 100%;
 }
 
+.bg-img {
+  background: 
+     
+    linear-gradient(
+      rgba(0, 47, 75, 0.6), 
+      rgba(220, 66, 37, 0.6)
+    ),
+    
+    url(http://unsplash.it/1200x800);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+ 
+  .jumbotron{
+    box-shadow: 8px 8px 30px rgba(0,0,0,0.6);
+  }
 @media (min-width: 48em) {
   .container {
     max-width: 46rem;
