--- a/Css/style.css
+++ b/Css/style.css
@@ -4,6 +4,12 @@ html, body {
 }
 
 .bg-img {
+    background-size:100%;
+      -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+              
+                background-size: 100% 100%;
   background: 
      
     linear-gradient(
